--- a/snippets/expandable-faq.liquid
+++ b/snippets/expandable-faq.liquid
@@ -40,8 +40,8 @@
     {% capture button_styles %}
       js-expandable-toggle faq--expandable-toggle faq--expandable-toggle-prod btn-transparent
       flex justify-between items-center
-      text-xl xl:text-3xl tracking-wider text-left w-full
-      font-acorn-semibold
+      text-lg xl:text-2xl tracking-wider text-left w-full
+      font-couch
       px-5 lg:px-12 py-5
       {% if active %}active{% endif %}
     {% endcapture %}
