--- a/sections/sustainability-timeline.liquid
+++ b/sections/sustainability-timeline.liquid
@@ -82,7 +82,7 @@
 
 <section class="pb-[60px] px-0">
 
-    <h2 class="text-[30px] lg:text-[48px] font-acorn-medium leading-tight mb-9 lg:mb-[68px] text-center px-8 lg:w-3/5 mx-auto">{{ section.settings.tl_header }} </h2>
+    <h2 class="text-[28px] lg:text-[40px] font-couch leading-tight mb-9 lg:mb-[68px] text-center px-8 lg:w-3/5 mx-auto">{{ section.settings.tl_header }} </h2>
 
     <div class="js-sustainability-timeline relative mb-[40px]_ ">
         {% render 'slick-arrows-white',
