--- a/sections/sustainability-header.liquid
+++ b/sections/sustainability-header.liquid
@@ -32,7 +32,7 @@
 
 
 <section class="js-sustainability-header py-8 pt-4 lg:py-14 lg:pt-[86px] px-5 lg:px-20">
-    <h1 class="font-acorn-medium text-[24px] lg:text-[32px] mb-4 lg:mb-[42px] flex flex-col-reverse items-center text-center w-fit mx-auto relative leading-tight">
+    <h1 class="font-couch text-[24px] lg:text-[32px] mb-4 lg:mb-[42px] flex flex-col-reverse items-center text-center w-fit mx-auto relative leading-tight">
         {{ section.settings.sus_header }}
         <div class="lg:absolute right-0 top-0 lg:translate-x-[150px] lg:-translate-y-1/2">
             <img class="w-[125px] mb-6" src="https://cdn.shopify.com/s/files/1/0249/4283/7837/files/heart.gif?v=1718022629" alt="hand-illustration">
