TR prod root update

--- a/sections/sustainability-investment.liquid
+++ b/sections/sustainability-investment.liquid
@@ -3,7 +3,7 @@
     <div class="lg:px-20 flex flex-col lg:flex-row gap-3 lg:gap-[42px] mb-[38px] lg:mb-[68px] items-center">
         <img class="w-[140px] lg:w-[218px]" src="{{ section.settings.inv_image |  img_url: 'master' }}" alt="twoforthefuture">
         <div>
-            <h2 class="font-acorn-medium leading-tight text-[28px] lg:text-[40px] mb-4 lg:mb-4 text-center lg:text-left">{{ section.settings.inv_header }}</h2>
+            <h2 class="font-couch leading-tight text-[28px] lg:text-[40px] mb-4 lg:mb-4 text-center lg:text-left">{{ section.settings.inv_header }}</h2>
             <p class="text-lg lg:text-[30px] font-light text-center lg:text-left leading-tight">
                 {{ section.settings.inv_para }}
             </p>
